--- a/sass/05-blocks/_alignments.scss
+++ b/sass/05-blocks/_alignments.scss
@@ -25,6 +25,7 @@
 .default-max-width {
 	margin-left: auto;
 	margin-right: auto;
+	width: $aligndefault-width;
 	max-width: min( $content-width, $aligndefault-width );
 }
 
@@ -46,6 +47,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	// max-width: var(--responsive--alignwide-width);
+	width: $alignwide-width;
 	max-width: min( $content-width, $alignwide-width );
 	position: relative;
 }
